# solamr

./: .gitignore  .gitmodules  README.md
rospy_tool/: README.md  (+3 more)
solamr/: CMakeLists.txt  package.xml
solamr/launch/: aruco.launch  fsm.launch  odom_test.launch  run.launch  run_double_AMR_car1.launch  run_double_AMR_car2.launch  run_single_AMR.launch  run_single_AMR_car1.launch  run_single_AMR_car2.launch  run_single_assembled.launch  run_sustain.launch  run_teleop.launch  solamr_move_base.launch  task_location_setter.launch  test_fsm.launch
solamr/launch/fkie/: master_discovery.launch  master_sync.launch
solamr/launch/includes/: move_base_dwa.xml  move_base_rap_planner.xml  move_base_teb.xml  multi_laser.launch.xml
solamr/maps/: 213.pgm  213.yaml  no_map.pgm  no_map.yaml  sqare.pgm  sqare.yaml  sqare_obstacle.pgm  sqare_obstacle.yaml
solamr/params/: laser_filter_param.yaml
solamr/params/move_base_dwa/: costmap_common_params.yaml  costmap_common_params_car1.yaml  dwa_local_planner_params.yaml  dwa_local_planner_params_ar_legacy.yaml  global_costmap_params.yaml  local_costmap_params.yaml
solamr/params/move_base_rap_planner/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
solamr/params/move_base_teb/: costmap_common_params.yaml  costmap_common_params_car2.yaml  (+6 more)
solamr/rviz/: tag_location_setter.rviz
solamr/scripts/: docking_controller.py  fsm.py  fsm_define.py  fsm_test_single_AMR.py  naive_controller.py  odom_big_car.py  odom_fuser_big_car.py  odom_fuser_single_AMR.py  odom_test.py  task_location_setter.py  teleop_key.py  teleop_twist_keyboard.py  test_switch.py  tf_forward_from_nano.py  tf_rviz_forwarder.py  tmp_test.py
(+125 files in other folders)
